--- a/01-bases/src/app/dbz/main-page/main-page.component.html
+++ b/01-bases/src/app/dbz/main-page/main-page.component.html
@@ -18,8 +18,19 @@
     <hr />
 
     <form (ngSubmit)="agregar()">
-      <input type="text" placeholder="Nombre" />
-      <input type="number" placeholder="Poder" />
+      <input
+        type="text"
+        placeholder="Nombre"
+        name="nombre"
+        [(ngModel)]="nuevo.nombre"
+      />
+      <input
+        type="number"
+        placeholder="Poder"
+        [value]="nuevo.poder"
+        name="poder"
+        [(ngModel)]="nuevo.poder"
+      />
 
       <button type="submit">Agregar</button>
     </form>
