--- a/01-bases/src/app/dbz/main-page/main-page.component.html
+++ b/01-bases/src/app/dbz/main-page/main-page.component.html
@@ -3,29 +3,10 @@
 
 <div class="row">
   <div class="col">
-    <app-personajes [data]="personajes"> </app-personajes>
+    <app-personajes [personajes]="personajes" />
   </div>
 
   <div class="col">
-    <h3>Agregar</h3>
-    <hr />
-
-    <form (ngSubmit)="agregar()">
-      <input
-        type="text"
-        placeholder="Nombre"
-        name="nombre"
-        [(ngModel)]="nuevo.nombre"
-      />
-      <input
-        type="number"
-        placeholder="Poder"
-        [value]="nuevo.poder"
-        name="poder"
-        [(ngModel)]="nuevo.poder"
-      />
-
-      <button type="submit">Agregar</button>
-    </form>
+    <app-agregar [personajes]="personajes" />
   </div>
 </div>
