--- a/01-bases/src/app/dbz/main-page/main-page.component.html
+++ b/01-bases/src/app/dbz/main-page/main-page.component.html
@@ -7,6 +7,6 @@
   </div>
 
   <div class="col">
-    <app-agregar [personajes]="personajes" />
+    <app-agregar [personajes]="personajes" [nuevo]="nuevo" />
   </div>
 </div>
