--- a/01-bases/src/app/dbz/main-page/main-page.component.html
+++ b/01-bases/src/app/dbz/main-page/main-page.component.html
@@ -3,13 +3,10 @@
 
 <div class="row">
   <div class="col">
-    <app-personajes [personajes]="personajes" />
+    <app-personajes />
   </div>
 
   <div class="col">
-    <app-agregar
-      [nuevo]="nuevo"
-      (onNuevoPersonaje)="agregarNuevoPersonaje($event)"
-    />
+    <app-agregar [nuevo]="nuevo" />
   </div>
 </div>
