--- a/02-gifsApp/src/app/app.component.html
+++ b/02-gifsApp/src/app/app.component.html
@@ -1,24 +1,4 @@
 <div class="d-flex">
-  <div class="bg-dark border-right p-3" id="sidebar">
-    <h3 class="text-light">Gifs-App</h3>
-    <hr class="text-light" />
-
-    <div class="list-group list-reset">
-      <a href="#" class="list-group-item list-group-item-action">Dashboard</a>
-    </div>
-  </div>
-
-  <div class="container">
-    <div class="row p-3">
-      <div class="col">
-        <h5>Buscar:</h5>
-        <input type="text" class="form-control" placeholder="Buscar gifs..." />
-      </div>
-    </div>
-    <hr />
-
-    <div class="row">
-      <div class="col">Lorem ipsum dolor sit amet</div>
-    </div>
-  </div>
+  <app-sidebar />
+  <app-gifs-page class="container" />
 </div>
