--- a/02-gifsApp/src/app/shared/sidebar/sidebar.component.html
+++ b/02-gifsApp/src/app/shared/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
       class="list-group-item list-group-item-action"
       *ngFor="let item of historial"
     >
-      {{ item }}
+      {{ item | titlecase }}
     </a>
   </div>
 </div>
