--- a/02-gifsApp/src/app/gifs/resultados/resultados.component.html
+++ b/02-gifsApp/src/app/gifs/resultados/resultados.component.html
@@ -1,1 +1,20 @@
-<span>Lorem ipsum dolor sit amet</span>
+<!-- <ul>
+  <li *ngFor="let gif of resultados">{{ gif.title }}</li>
+</ul> -->
+
+<div class="row">
+  <div class="col-md-4 col-sm-6" *ngFor="let gif of resultados">
+    <div class="card">
+      <img
+        [src]="gif.images.downsized_medium.url"
+        [alt]="gif.title"
+        class="card-img-top"
+      />
+      <div class="card-body">
+        <p class="card-text">
+          {{ gif.images.downsized_medium.url }}
+        </p>
+      </div>
+    </div>
+  </div>
+</div>
