--- a/02-gifsApp/src/app/shared/sidebar/sidebar.component.html
+++ b/02-gifsApp/src/app/shared/sidebar/sidebar.component.html
@@ -5,6 +5,7 @@
   <div class="list-group list-reset">
     <a
       href="#"
+      (click)="buscar(item)"
       class="list-group-item list-group-item-action"
       *ngFor="let item of historial"
     >
