Search box implementation

--- a/03-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/03-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -1,1 +1,20 @@
-<p>by-capital-page works!</p>
+<h2>Por capital</h2>
+<hr />
+
+<div class="row">
+  <div class="col">
+    <!-- Search box -->
+    <shared-search-box
+      placeholder="Busqueda por capital"
+      (onValue)="searchByCapital($event)"
+    />
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
+    <!-- Resultados -->
+    <hr />
+    Tabla de resultados
+  </div>
+</div>
