Observable catching error

--- a/03-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/03-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -15,6 +15,7 @@
   <div class="col">
     <!-- Resultados -->
     <hr />
-    Tabla de resultados
+
+    <countries-table [countries]="countries" />
   </div>
 </div>
