--- a/03-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/03-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,1 +1,21 @@
-<p>by-region-page works!</p>
+<h2>Por region</h2>
+<hr />
+
+<div class="row">
+  <div class="col">
+    <!-- Search box -->
+    <shared-search-box
+      placeholder="Busqueda por region"
+      (onValue)="searchByRegion($event)"
+    />
+  </div>
+</div>
+
+<div class="row">
+  <div class="col">
+    <!-- Resultados -->
+    <hr />
+
+    <countries-table [countries]="countries" />
+  </div>
+</div>
