--- a/03-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/03-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -16,6 +16,7 @@
     <!-- Resultados -->
     <hr />
 
+    <shared-loading-spinner *ngIf="isLoading" />
     <countries-table [countries]="countries" />
   </div>
 </div>
