--- a/03-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/03-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -6,7 +6,7 @@
     <!-- Search box -->
     <shared-search-box
       placeholder="Busqueda por capital"
-      (onValue)="searchByCapital($event)"
+      (onDebounce)="searchByCapital($event)"
     />
   </div>
 </div>
