region apge changes

--- a/03-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/03-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -2,12 +2,16 @@
 <hr />
 
 <div class="row">
-  <div class="col">
+  <div class="col text-center">
     <!-- Search box -->
-    <shared-search-box
-      placeholder="Busqueda por region"
-      (onValue)="searchByRegion($event)"
-    />
+    <button
+      *ngFor="let region of regions"
+      class="btn mx-2"
+      [ngClass]="{ 'btn-outline-primary': selectedRegion === region }"
+      (click)="searchByRegion(region)"
+    >
+      {{ region }}
+    </button>
   </div>
 </div>
 
