--- a/03-countryApp/src/app/shared/components/search-box/search-box.component.html
+++ b/03-countryApp/src/app/shared/components/search-box/search-box.component.html
@@ -2,8 +2,9 @@
 
 <input
   type="text"
-  [placeholder]="placeholder"
   class="form-control"
+  [value]="initialValue"
+  [placeholder]="placeholder"
   (keyup)="onKeyPress(textInput.value)"
   #textInput
 />
