--- a/03-countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/03-countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -7,6 +7,7 @@
     <shared-search-box
       placeholder="Busqueda por capital"
       (onValue)="searchByCountry($event)"
+      [initialValue]="initialValue"
     />
   </div>
 </div>
