--- a/03-countryApp/src/app/countries/components/country-table/country-table.component.html
+++ b/03-countryApp/src/app/countries/components/country-table/country-table.component.html
@@ -2,7 +2,7 @@
   *ngIf="countries.length === 0; else table"
   class="alert alert-warning text-center"
 >
-  No hay paises que mostrar
+  No hay países que mostrar
 </div>
 
 <ng-template #table>
@@ -27,17 +27,11 @@
         <td>
           <img [src]="country.flags.svg" [alt]="country.name.common" />
         </td>
+        <td>{{ country.name.common }}</td>
+        <td>{{ country.capital }}</td>
+        <td>{{ country.population | number }}</td>
         <td>
-          {{ country.name.common }}
-        </td>
-        <td>
-          {{ country.capital }}
-        </td>
-        <td>
-          {{ country.population | number }}
-        </td>
-        <td>
-          <a routerLink="['/countries/by', country.cca3]">Info</a>
+          <a [routerLink]="['/countries/by', country.cca3]">Info</a>
         </td>
       </tr>
     </tbody>
