--- a/03-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
+++ b/03-countryApp/src/app/countries/pages/by-capital-page/by-capital-page.component.html
@@ -1,22 +1,23 @@
-<h2>Por capital</h2>
+<h2>Por Capital</h2>
 <hr />
 
 <div class="row">
   <div class="col">
-    <!-- Search box -->
+    <!-- SearchBox -->
+    <!-- (onValue)="searchByCapital($event)" -->
     <shared-search-box
       (onDebounce)="searchByCapital($event)"
-      placeholder="Busqueda por capital"
-    />
+      [initialValue]="initialValue"
+      placeholder="Buscar por capital"
+    ></shared-search-box>
   </div>
 </div>
 
 <div class="row">
   <div class="col">
-    <!-- Resultados -->
     <hr />
+    <shared-loading-spinner *ngIf="isLoading"></shared-loading-spinner>
 
-    <shared-loading-spinner *ngIf="isLoading" />
-    <countries-table [countries]="countries" />
+    <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
