--- a/03-countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
+++ b/03-countryApp/src/app/countries/pages/by-country-page/by-country-page.component.html
@@ -1,22 +1,20 @@
-<h2>Por pais</h2>
+<h2>Por País</h2>
 <hr />
 
 <div class="row">
   <div class="col">
-    <!-- Search box -->
+    <!-- SearchBox -->
     <shared-search-box
-      placeholder="Busqueda por capital"
-      (onValue)="searchByCountry($event)"
+      (onDebounce)="searchByCountry($event)"
       [initialValue]="initialValue"
-    />
+      placeholder="Buscar por país"
+    ></shared-search-box>
   </div>
 </div>
 
 <div class="row">
   <div class="col">
-    <!-- Resultados -->
     <hr />
-
-    <countries-table [countries]="countries" />
+    <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
