--- a/03-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
+++ b/03-countryApp/src/app/countries/pages/by-region-page/by-region-page.component.html
@@ -1,9 +1,9 @@
-<h2>Por region</h2>
+<h2>Por Región</h2>
 <hr />
 
 <div class="row">
   <div class="col text-center">
-    <!-- Search box -->
+    <!-- SearchBox -->
     <button
       *ngFor="let region of regions"
       class="btn mx-2"
@@ -17,9 +17,7 @@
 
 <div class="row">
   <div class="col">
-    <!-- Resultados -->
     <hr />
-
-    <countries-table [countries]="countries" />
+    <countries-table [countries]="countries"></countries-table>
   </div>
 </div>
