--- a/03-countryApp/src/app/countries/pages/country-page/country-page.component.html
+++ b/03-countryApp/src/app/countries/pages/country-page/country-page.component.html
@@ -22,13 +22,13 @@
       />
     </div>
     <div class="col">
-      <h3>Información:</h3>
+      <h3>Información</h3>
       <ul class="list-group">
         <li class="list-group-item">
-          <strong>Población: </strong> {{ country.population | number }}
+          <strong>Población:</strong> {{ country.population | number }}
         </li>
         <li class="list-group-item">
-          <strong>Código: </strong> {{ country.cca3 }}
+          <strong>Código:</strong> {{ country.cca3 }}
         </li>
       </ul>
     </div>
@@ -37,6 +37,7 @@
   <div class="row mt-2">
     <div class="col">
       <h3>Traducciones</h3>
+
       <div class="d-flex flex-wrap">
         <span class="badge bg-primary m-1">{{
           country.translations["ara"].common
@@ -51,7 +52,22 @@
           country.translations["cym"].common
         }}</span>
         <span class="badge bg-primary m-1">{{
+          country.translations["deu"].common
+        }}</span>
+        <span class="badge bg-primary m-1">{{
+          country.translations["est"].common
+        }}</span>
+        <span class="badge bg-primary m-1">{{
           country.translations["fin"].common
+        }}</span>
+        <span class="badge bg-primary m-1">{{
+          country.translations["ita"].common
+        }}</span>
+        <span class="badge bg-primary m-1">{{
+          country.translations["kor"].common
+        }}</span>
+        <span class="badge bg-primary m-1">{{
+          country.translations["per"].common
         }}</span>
       </div>
     </div>
