basic page implements

--- a/04-pipesApp/src/app/products/pages/basics-page/basics-page.component.html
+++ b/04-pipesApp/src/app/products/pages/basics-page/basics-page.component.html
@@ -1,1 +1,16 @@
-<p>basics-page works!</p>
+<p-panel [showHeader]="false">
+  <h1>Pipes básicos</h1>
+  <p>Pipes incluidos en Angular - Usualmente en el Common module</p>
+</p-panel>
+
+<div class="p-grid">
+  <div class="p-col-4">
+    <p-card header="uppercase">1</p-card>
+  </div>
+  <div class="p-col-4">
+    <p-card header="lowercase">2</p-card>
+  </div>
+  <div class="p-col-4">
+    <p-card header="titlecase">3</p-card>
+  </div>
+</div>
