--- a/04-pipesApp/src/app/products/pages/numbers-page/numbers-page.component.html
+++ b/04-pipesApp/src/app/products/pages/numbers-page/numbers-page.component.html
@@ -1,1 +1,23 @@
-<p>numbers-page works!</p>
+<p-panel header="Pipes numéricos" class="p-2">
+  <p>Pipes incluidos en Angular - Usualmente en el Common module</p>
+</p-panel>
+
+<div class="grid">
+  <div class="col-12 md:col-4">
+    <p-card header="Ventas netas" subheader="del presente año">
+      {{ totalSells + 123 | number : "1.2-2" }}
+    </p-card>
+  </div>
+
+  <div class="col-12 md:col-4">
+    <p-card header="Ventas brutas" subheader="del presente año">
+      {{ totalSells | currency : "" : "symbol-narrow" : "1.4-4" }}
+    </p-card>
+  </div>
+
+  <div class="col-12 md:col-4">
+    <p-card header="ganancia porcentual" subheader="del presente año">
+      {{ percent | percent : "1.2-2" }}
+    </p-card>
+  </div>
+</div>
