--- a/05-heroesApp/src/app/heroes/components/card/card.component.html
+++ b/05-heroesApp/src/app/heroes/components/card/card.component.html
@@ -1,27 +1,44 @@
 <mat-card>
-  <mat-card-header>{{ hero.superhero }}</mat-card-header>
-  <mat-card-subtitle>{{ hero.alter_ego }}</mat-card-subtitle>
+  <mat-card-header>
+    <mat-card-title>{{ hero.superhero }}</mat-card-title>
+    <mat-card-subtitle>{{ hero.alter_ego }}</mat-card-subtitle>
+  </mat-card-header>
 
-  <!-- Todo: imagen -->
+  <img mat-card-image [alt]="hero.superhero" [src]="hero | heroImage" />
 
   <mat-card-content class="mt-2">
     <h4>{{ hero.publisher }}</h4>
-    <p><strong>Primera aparicion</strong> {{ hero.first_appearance }}</p>
-    <br />
-
-    <mat-chip-listbox>
-      <mat-chip *ngFor="let name of hero.characters.split(',') | slice : 0 : 3">
-        {{ name }}
-      </mat-chip>
-    </mat-chip-listbox>
+    <p>
+      <strong>Primera aparición</strong> {{ hero.first_appearance }}
+      <br />
+      <mat-chip-listbox>
+        <mat-chip
+          *ngFor="let name of hero.characters.split(',') | slice : 0 : 3"
+        >
+          {{ name }}
+        </mat-chip>
+      </mat-chip-listbox>
+    </p>
   </mat-card-content>
 
-  <mat-divider>
-    <mat-card-actions>
-      <button mat-button mat-raised color="primary">
-        <mat-icon>edit</mat-icon>
-        Editar
-      </button>
-    </mat-card-actions>
-  </mat-divider>
+  <mat-divider></mat-divider>
+
+  <mat-card-actions>
+    <button
+      mat-button
+      mat-raised
+      color="primary"
+      [routerLink]="['/heroes/edit', hero.id]"
+    >
+      <mat-icon>edit</mat-icon>
+      Editar
+    </button>
+
+    <span class="spacer"></span>
+
+    <button mat-button mat-raised [routerLink]="['/heroes', hero.id]">
+      <mat-icon>more_horiz</mat-icon>
+      Más
+    </button>
+  </mat-card-actions>
 </mat-card>
