--- a/05-heroesApp/src/app/auth/pages/login-page/login-page.component.html
+++ b/05-heroesApp/src/app/auth/pages/login-page/login-page.component.html
@@ -1,8 +1,9 @@
 <div class="flex flex-column">
-  <span class="text-lg mb-4"> Login </span>
+  <span class="text-lg mb-4">Login</span>
+
   <mat-form-field>
     <mat-label>Usuario</mat-label>
-    <input type="text" matInput placeholder="Nombre del usuario" />
+    <input type="text" matInput placeholder="Nombre de usuario" />
   </mat-form-field>
 
   <mat-form-field>
@@ -16,6 +17,6 @@
   </button>
 
   <div class="flex justify-content-end mt-5">
-    <a routerLink="/auth/new-account"> ¿Ya tienes cuenta? </a>
+    <a routerLink="/auth/new-account">¿Ya tienes cuenta?</a>
   </div>
 </div>
