--- a/05-heroesApp/src/app/auth/pages/register-page/register-page.component.html
+++ b/05-heroesApp/src/app/auth/pages/register-page/register-page.component.html
@@ -1,13 +1,14 @@
 <div class="flex flex-column">
-  <span class="text-lg mb-4"> Registro </span>
+  <span class="text-lg mb-4">Registro</span>
+
   <mat-form-field>
     <mat-label>Usuario</mat-label>
-    <input type="text" matInput placeholder="Nombre del usuario" />
+    <input type="text" matInput placeholder="Nombre de usuario" />
   </mat-form-field>
 
   <mat-form-field>
     <mat-label>Nombre</mat-label>
-    <input type="text" matInput placeholder="Nombre del usuario" />
+    <input type="text" matInput placeholder="Nombre de usuario" />
   </mat-form-field>
 
   <mat-form-field>
@@ -21,6 +22,6 @@
   </button>
 
   <div class="flex justify-content-end mt-5">
-    <a routerLink="/auth/login"> ¿No tienes cuenta? </a>
+    <a routerLink="/auth/login">¿No tienes cuenta?</a>
   </div>
 </div>
