--- a/05-heroesApp/src/app/heroes/pages/layout-page/layout-page.component.html
+++ b/05-heroesApp/src/app/heroes/pages/layout-page/layout-page.component.html
@@ -10,7 +10,7 @@
 
     <mat-nav-list>
       <mat-list-item
-        *ngFor="let item of sidebaritems"
+        *ngFor="let item of sidebarItems"
         [routerLink]="item.url"
         (click)="sidenav.toggle()"
       >
@@ -26,9 +26,11 @@
     </button>
 
     <span class="spacer"></span>
+
     <button mat-button>Logout</button>
   </mat-toolbar>
-  <div class="container">
-    <router-outlet />
+
+  <div class="container p-2">
+    <router-outlet></router-outlet>
   </div>
 </mat-sidenav-container>
