Validacion (filter) & Form flow

--- a/05-heroesApp/src/app/heroes/pages/new-page/new-page.component.html
+++ b/05-heroesApp/src/app/heroes/pages/new-page/new-page.component.html
@@ -1,6 +1,6 @@
 <h1>
-  Editar / Agregar héroe
-  <small>Superman</small>
+  {{ currentHero.id ? "Editar" : "Agregar" }} héroe
+  <small *ngIf="currentHero.id">{{ currentHero.superhero }} </small>
 </h1>
 
 <mat-divider class="mb-2"></mat-divider>
@@ -54,7 +54,15 @@
         </form>
 
         <div class="flex justify-content-between">
-          <button mat-flat-button color="warn">Borrar</button>
+          <button
+            mat-flat-button
+            color="warn"
+            *ngIf="currentHero"
+            (click)="onDeleteHero()"
+          >
+            Borrar
+          </button>
+          <span></span>
 
           <button mat-flat-button color="primary" (click)="onSubmit()">
             <mat-icon>save</mat-icon>
