--- a/06-formsApp/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/06-formsApp/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -3,15 +3,16 @@
 
 <div class="row">
   <div class="col">
-    <form autocomplete="off">
+    <form [formGroup]="myForm" autocomplete="off" (ngSubmit)="onSave()">
       <!-- Campo de producto -->
       <div class="mb-3 row">
         <label class="col-sm-3 col-form-label">Producto</label>
         <div class="col-sm-9">
           <input
-            type="text"
             class="form-control"
+            formControlName="name"
             placeholder="Nombre del producto"
+            type="text"
           />
 
           <span class="form-text text-danger">
@@ -26,9 +27,10 @@
         <label class="col-sm-3 col-form-label">Precio</label>
         <div class="col-sm-9">
           <input
-            type="number"
             class="form-control"
+            formControlName="price"
             placeholder="Precio del producto"
+            type="number"
           />
           <span class="form-text text-danger">
             El precio debe de ser 0 o mayor
@@ -41,9 +43,10 @@
         <label class="col-sm-3 col-form-label">Existencias</label>
         <div class="col-sm-9">
           <input
-            type="number"
             class="form-control"
+            formControlName="inStorage"
             placeholder="Existencias del producto"
+            type="number"
           />
 
           <span class="form-text text-danger">
