--- a/06-formsApp/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/06-formsApp/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -15,23 +15,8 @@
             type="text"
           />
 
-          <span
-            class="form-text text-danger"
-            *ngIf="
-              myForm.controls['name'].getError('required') &&
-              myForm.controls['name'].touched
-            "
-          >
-            Este campo es requerido
-          </span>
-          <span
-            class="form-text text-danger"
-            *ngIf="
-              myForm.controls['name'].getError('minlength') &&
-              myForm.controls['name'].touched
-            "
-          >
-            Este campo requiere un mínimo de tres letras
+          <span class="form-text text-danger" *ngIf="isValidField('name')">
+            {{ getFieldError("name") }}
           </span>
         </div>
       </div>
@@ -46,7 +31,7 @@
             placeholder="Precio del producto"
             type="number"
           />
-          <span class="form-text text-danger">
+          <span class="form-text text-danger" *ngIf="isValidField('price')">
             El precio debe de ser 0 o mayor
           </span>
         </div>
@@ -63,7 +48,7 @@
             type="number"
           />
 
-          <span class="form-text text-danger">
+          <span class="form-text text-danger" *ngIf="isValidField('inStorage')">
             Las existencias deben de ser 0 o mayor
           </span>
         </div>
