delete from array form

--- a/06-formsApp/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/06-formsApp/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -41,7 +41,13 @@
       >
         <div class="input-group">
           <input class="form-control" [formControlName]="i" />
-          <button class="btn btn-outline-danger" type="button">Eliminar</button>
+          <button
+            class="btn btn-outline-danger"
+            type="button"
+            (click)="onDeleteFavorite(i)"
+          >
+            Eliminar
+          </button>
         </div>
         <span
           class="form-text text-danger"
