--- a/06-formsApp/src/app/reactive/pages/switches-page/switches-page.component.html
+++ b/06-formsApp/src/app/reactive/pages/switches-page/switches-page.component.html
@@ -1,7 +1,7 @@
 <h2>Reactivos: Switches</h2>
 <hr />
 
-<form autocomplete="off">
+<form autocomplete="off" [formGroup]="myForm" (ngSubmit)="onSave()">
   <!-- Radio -->
   <div class="row mb-3">
     <label class="col-sm-3 col-form-label">Género</label>
@@ -9,9 +9,10 @@
       <div class="form-check">
         <input
           class="form-check-input"
+          formControlName="gender"
+          id="radioMasculino"
           type="radio"
           value="M"
-          id="radioMasculino"
         />
         <label class="form-check-label" for="radioMasculino"> Masculino </label>
       </div>
@@ -19,9 +20,10 @@
       <div class="form-check">
         <input
           class="form-check-input"
+          formControlName="gender"
+          id="radioFemenino"
           type="radio"
           value="F"
-          id="radioFemenino"
         />
         <label class="form-check-label" for="radioFemenino"> Femenino </label>
       </div>
@@ -35,8 +37,9 @@
       <div class="form-check form-switch mt-2">
         <input
           class="form-check-input"
-          type="checkbox"
+          formControlName="wantNotifications"
           id="flexSwitchCheckChecked"
+          type="checkbox"
         />
         <label class="form-check-label" for="flexSwitchCheckChecked"
           >Quiero recibir notificaciones</label
@@ -50,12 +53,20 @@
     <label class="col-sm-3 col-form-label"></label>
     <div class="col-sm-9">
       <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="flexCheckDefault" />
+        <input
+          class="form-check-input"
+          formControlName="termsAndConditions"
+          id="flexCheckDefault"
+          type="checkbox"
+        />
         <label class="form-check-label" for="flexCheckDefault">
           Términos y condiciones de uso
         </label>
       </div>
-      <span class="form-text text-danger">
+      <span
+        *ngIf="isValidField('termsAndConditions')"
+        class="form-text text-danger"
+      >
         Debe de aceptar las condiciones de uso
       </span>
     </div>
@@ -70,15 +81,15 @@
 </form>
 
 <h5>Valor del formulario</h5>
-<pre>{{ "object" | json }}</pre>
+<pre>{{ myForm.value | json }}</pre>
 <br />
 
 <h5>Persona</h5>
-<pre>{{ "object" | json }}</pre>
+<pre>{{ this.person | json }}</pre>
 <br />
 
 <h5>Valid</h5>
-<pre>{{ "object" | json }}</pre>
+<pre>{{ myForm.valid | json }}</pre>
 
 <!-- <h5>Términos</h5> -->
 <!-- <pre>{{ myForm.controls?.terminos?.errors | json }}</pre> -->
