--- a/06-formsApp/src/app/auth/pages/register-page/register-page.component.html
+++ b/06-formsApp/src/app/auth/pages/register-page/register-page.component.html
@@ -3,15 +3,16 @@
 
 <div class="row">
   <div class="col">
-    <form autocomplete="off">
+    <form autocomplete="off" [formGroup]="myForm" (ngSubmit)="onSubmit()">
       <!-- Nombre -->
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Nombre</label>
         <div class="col-sm-9">
           <input
-            type="text"
             class="form-control"
+            formControlName="name"
             placeholder="Nombre del usuario"
+            type="text"
           />
 
           <span class="form-text text-danger">
@@ -25,9 +26,10 @@
         <label class="col-sm-3 col-form-label">Email</label>
         <div class="col-sm-9">
           <input
-            type="email"
             class="form-control"
+            formControlName="email"
             placeholder="Email del usuario"
+            type="email"
           />
           <span class="form-text text-danger">
             mensaje de error del email
@@ -40,9 +42,10 @@
         <label class="col-sm-3 col-form-label">Username</label>
         <div class="col-sm-9">
           <input
-            type="text"
             class="form-control"
+            formControlName="username"
             placeholder="Nombre código del usuario"
+            type="text"
           />
           <span class="form-text text-danger">
             El username no puede ser Strider
@@ -55,9 +58,10 @@
         <label class="col-sm-3 col-form-label">Password</label>
         <div class="col-sm-9">
           <input
-            type="password"
             class="form-control"
+            formControlName="password"
             placeholder="Password de su cuenta"
+            type="password"
           />
 
           <span class="form-text text-danger">
@@ -71,9 +75,10 @@
         <label class="col-sm-3 col-form-label">Confirmar</label>
         <div class="col-sm-9">
           <input
-            type="password"
             class="form-control"
+            formControlName="password2"
             placeholder="Confirmar la contraseña"
+            type="password"
           />
 
           <span class="form-text text-danger">
@@ -91,23 +96,23 @@
   </div>
 </div>
 
-<h2>Form Valid:</h2>
-<h2>Form Status:</h2>
-<h2>Form Pending:</h2>
+<h2>Form Valid: {{ myForm.valid }}</h2>
+<h2>Form Status: {{ myForm.status }}</h2>
+<h2>Form Pending: {{ myForm.pending }}</h2>
 <h2>Form errors</h2>
-<pre>{{ "formulario" | json }}</pre>
+<pre>{{ myForm.errors | json }}</pre>
 
 <h5>Nombre</h5>
-<pre>{{ "formulario" | json }}</pre>
+<pre>{{ myForm.value.name | json }}</pre>
 
 <h5>Email</h5>
-<pre>{{ "formulario" | json }}</pre>
+<pre>{{ myForm.value.email | json }}</pre>
 
 <h5>Username</h5>
-<pre>{{ "formulario" | json }}</pre>
+<pre>{{ myForm.value.username | json }}</pre>
 
 <h5>Password</h5>
-<pre>{{ "formulario" | json }}</pre>
+<pre>{{ myForm.value.password | json }}</pre>
 
 <h5>Confirmar</h5>
-<pre>{{ "formulario" | json }}</pre>
+<pre>{{ myForm.value.password2 | json }}</pre>
