Final fix refactor

--- a/06-formsApp/src/app/auth/pages/register-page/register-page.component.html
+++ b/06-formsApp/src/app/auth/pages/register-page/register-page.component.html
@@ -3,16 +3,16 @@
 
 <div class="row">
   <div class="col">
-    <form autocomplete="off" [formGroup]="myForm" (ngSubmit)="onSubmit()">
+    <form [formGroup]="myForm" (ngSubmit)="onSubmit()" autocomplete="off">
       <!-- Nombre -->
       <div class="row mb-3">
         <label class="col-sm-3 col-form-label">Nombre</label>
         <div class="col-sm-9">
           <input
+            type="text"
             class="form-control"
             formControlName="name"
             placeholder="Nombre del usuario"
-            type="text"
           />
 
           <span *ngIf="isValidField('name')" class="form-text text-danger">
@@ -26,11 +26,12 @@
         <label class="col-sm-3 col-form-label">Email</label>
         <div class="col-sm-9">
           <input
+            type="email"
             class="form-control"
             formControlName="email"
             placeholder="Email del usuario"
-            type="email"
           />
+
           <span *ngIf="isValidField('email')" class="form-text text-danger">
             mensaje de error del email
           </span>
@@ -42,11 +43,12 @@
         <label class="col-sm-3 col-form-label">Username</label>
         <div class="col-sm-9">
           <input
+            type="text"
             class="form-control"
             formControlName="username"
             placeholder="Nombre código del usuario"
-            type="text"
           />
+
           <span *ngIf="isValidField('username')" class="form-text text-danger">
             El username no puede ser Strider
           </span>
@@ -58,10 +60,10 @@
         <label class="col-sm-3 col-form-label">Password</label>
         <div class="col-sm-9">
           <input
+            type="password"
             class="form-control"
             formControlName="password"
             placeholder="Password de su cuenta"
-            type="password"
           />
 
           <span *ngIf="isValidField('password')" class="form-text text-danger">
@@ -75,10 +77,10 @@
         <label class="col-sm-3 col-form-label">Confirmar</label>
         <div class="col-sm-9">
           <input
+            type="password"
             class="form-control"
             formControlName="password2"
             placeholder="Confirmar la contraseña"
-            type="password"
           />
 
           <span *ngIf="isValidField('password2')" class="form-text text-danger">
@@ -115,4 +117,4 @@
 <pre>{{ myForm.value.password | json }}</pre>
 
 <h5>Confirmar</h5>
-<pre>{{ myForm.value.password2 | json }}</pre>
+<pre>{{ myForm.controls["password2"].errors | json }}</pre>
