--- a/06-formsApp/src/app/reactive/pages/basic-page/basic-page.component.html
+++ b/06-formsApp/src/app/reactive/pages/basic-page/basic-page.component.html
@@ -3,19 +3,19 @@
 
 <div class="row">
   <div class="col">
-    <form [formGroup]="myForm" autocomplete="off" (ngSubmit)="onSave()">
+    <form [formGroup]="myForm" (ngSubmit)="onSave()" autocomplete="off">
       <!-- Campo de producto -->
       <div class="mb-3 row">
         <label class="col-sm-3 col-form-label">Producto</label>
         <div class="col-sm-9">
           <input
+            type="text"
             class="form-control"
             formControlName="name"
             placeholder="Nombre del producto"
-            type="text"
           />
 
-          <span class="form-text text-danger" *ngIf="isValidField('name')">
+          <span *ngIf="isValidField('name')" class="form-text text-danger">
             {{ getFieldError("name") }}
           </span>
         </div>
@@ -26,13 +26,14 @@
         <label class="col-sm-3 col-form-label">Precio</label>
         <div class="col-sm-9">
           <input
+            type="number"
             class="form-control"
             formControlName="price"
             placeholder="Precio del producto"
-            type="number"
           />
-          <span class="form-text text-danger" *ngIf="isValidField('price')">
-            El precio debe de ser 0 o mayor
+
+          <span *ngIf="isValidField('price')" class="form-text text-danger">
+            El precio debe de ser 0 o mayor.
           </span>
         </div>
       </div>
@@ -42,13 +43,13 @@
         <label class="col-sm-3 col-form-label">Existencias</label>
         <div class="col-sm-9">
           <input
+            type="number"
             class="form-control"
             formControlName="inStorage"
             placeholder="Existencias del producto"
-            type="number"
           />
 
-          <span class="form-text text-danger" *ngIf="isValidField('inStorage')">
+          <span *ngIf="isValidField('inStorage')" class="form-text text-danger">
             Las existencias deben de ser 0 o mayor
           </span>
         </div>
