--- a/06-formsApp/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
+++ b/06-formsApp/src/app/reactive/pages/dynamic-page/dynamic-page.component.html
@@ -8,10 +8,10 @@
     <div class="col-sm-9">
       <input
         class="form-control"
-        placeholder="Nombre de la persona"
         formControlName="name"
+        placeholder="Nombre de la persona"
       />
-      <span class="form-text text-danger" *ngIf="isValidField('name')">
+      <span *ngIf="isValidField('name')" class="form-text text-danger">
         {{ getFieldError("name") }}
       </span>
     </div>
@@ -24,14 +24,14 @@
       <div class="input-group">
         <input
           class="form-control"
-          placeholder="Agregar favorito"
           [formControl]="newFavorite"
+          placeholder="Agregar favorito"
         />
 
         <button
+          (click)="onAddToFavorites()"
           class="btn btn-outline-primary"
           type="button"
-          (click)="onAddToFavorites()"
         >
           Agregar favorito
         </button>
@@ -48,18 +48,20 @@
         *ngFor="let favorite of favoriteGames.controls; let i = index"
       >
         <div class="input-group">
-          <input class="form-control" [formControlName]="i" />
+          <input [formControlName]="i" class="form-control" />
+
           <button
+            (click)="onDeleteFavorite(i)"
             class="btn btn-outline-danger"
             type="button"
-            (click)="onDeleteFavorite(i)"
           >
             Eliminar
           </button>
         </div>
+
         <span
-          class="form-text text-danger"
           *ngIf="isValidFieldInArray(favoriteGames, i)"
+          class="form-text text-danger"
         >
           Este campo es requerido
         </span>
