--- a/06-formsApp/src/app/reactive/pages/switches-page/switches-page.component.html
+++ b/06-formsApp/src/app/reactive/pages/switches-page/switches-page.component.html
@@ -1,7 +1,7 @@
 <h2>Reactivos: Switches</h2>
 <hr />
 
-<form autocomplete="off" [formGroup]="myForm" (ngSubmit)="onSave()">
+<form [formGroup]="myForm" (ngSubmit)="onSave()" autocomplete="off">
   <!-- Radio -->
   <div class="row mb-3">
     <label class="col-sm-3 col-form-label">Género</label>
@@ -9,10 +9,10 @@
       <div class="form-check">
         <input
           class="form-check-input"
-          formControlName="gender"
-          id="radioMasculino"
           type="radio"
           value="M"
+          formControlName="gender"
+          id="radioMasculino"
         />
         <label class="form-check-label" for="radioMasculino"> Masculino </label>
       </div>
@@ -20,10 +20,10 @@
       <div class="form-check">
         <input
           class="form-check-input"
-          formControlName="gender"
-          id="radioFemenino"
           type="radio"
           value="F"
+          formControlName="gender"
+          id="radioFemenino"
         />
         <label class="form-check-label" for="radioFemenino"> Femenino </label>
       </div>
@@ -37,9 +37,9 @@
       <div class="form-check form-switch mt-2">
         <input
           class="form-check-input"
+          type="checkbox"
           formControlName="wantNotifications"
           id="flexSwitchCheckChecked"
-          type="checkbox"
         />
         <label class="form-check-label" for="flexSwitchCheckChecked"
           >Quiero recibir notificaciones</label
@@ -55,9 +55,9 @@
       <div class="form-check">
         <input
           class="form-check-input"
+          type="checkbox"
           formControlName="termsAndConditions"
           id="flexCheckDefault"
-          type="checkbox"
         />
         <label class="form-check-label" for="flexCheckDefault">
           Términos y condiciones de uso
@@ -85,7 +85,7 @@
 <br />
 
 <h5>Persona</h5>
-<pre>{{ this.person | json }}</pre>
+<pre>{{ person | json }}</pre>
 <br />
 
 <h5>Valid</h5>
