--- a/09-mapsApp/src/app/maps/components/side-menu/side-menu.component.html
+++ b/09-mapsApp/src/app/maps/components/side-menu/side-menu.component.html
@@ -1,7 +1,7 @@
 <ul class="list-group">
   <li
-    *ngFor="let item of menuItem"
-    [routerLink]="item.route"
+    *ngFor="let item of menuItems"
+    [routerLink]="[item.route]"
     routerLinkActive="active"
     class="list-group-item"
   >
